# template-rust

./: .gitignore  README.md  flake.nix  justfile
.github/workflows/: build.yml
template/: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  cargo-generate.toml  cargo.toml.rhai  flake.nix  justfile  rust-toolchain.toml
template/.github/workflows/: audit.yml  cd.yml  ci.yml  nix.yml  rust.yml
template/src/: lib.rs  main.rs
