[package]
name = "{{ project-name }}"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
{% if rs-channel == "stable" %}
rust-version.workspace = true
{% endif %}

[workspace]
members = []

[workspace.package]
publish = false
version = "0.1.0"
edition = "2024"
description = "{{ project-description }}"
license = "GPL-3.0-only"
homepage = "https://github.com/{{ gh-org }}/{{ gh-repo }}"
documentation = "https://docs.rs/{{ project-name }}"
repository = "https://github.com/{{ gh-org }}/{{ gh-repo }}"
{% if rs-channel == "stable" %}
rust-version = "{{ rs-version }}"
{% endif %}

{% if crate_type == "lib" %}
[lib]
doctest = false
{% endif %}

{% if crate_type == "bin" %}
[[bin]]
name = "{{ project-name }}"
path = "src/main.rs"
{% endif %}

[lints]
workspace = true

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1

[profile.dev]
debug = 0

[features]
default = []

[dependencies]

[workspace.lints.clippy]
cast_lossless = "deny"
complexity = { level = "deny", priority = -1 }
correctness = { level = "deny", priority = -1 }
dbg_macro = "deny"
explicit_into_iter_loop = "deny"
explicit_iter_loop = "deny"
get_first = "deny"
implicit_clone = "deny"
indexing_slicing = "deny"
inefficient_to_string = "deny"
items-after-statements = "deny"
manual_string_new = "deny"
needless_collect = "deny"
perf = { level = "deny", priority = -1 }
redundant_closure_for_method_calls = "deny"
style = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
uninlined_format_args = "allow"
unused_self = "deny"
unwrap_used = "deny"
unimplemented = "deny"
unused_async = "deny"
map_err_ignore = "deny"
expect_used = "deny"
as_conversions = "deny"
